--- a/res/layout/dialog_workout_name.xml
+++ b/res/layout/dialog_workout_name.xml
@@ -2,43 +2,84 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
-              android:layout_height="wrap_content" android:background="@color/light_grey_1"
-              android:gravity="center">
+              android:layout_height="wrap_content"
+              android:background="@color/light_grey_1"
+              android:weightSum="1"
+              android:baselineAligned="false">
 
     <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:background="#ffa500">
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:background="#ffa500">
+
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/dlg_workout_name"
-                android:id="@+id/textView2" android:layout_gravity="left|center"
-                android:elegantTextHeight="false" android:layout_marginTop="15dp" android:textSize="30sp"
-                android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginBottom="15dp"
-        />
+                android:id="@+id/textView2"
+                android:layout_gravity="center"
+                android:elegantTextHeight="false"
+                android:textSize="30sp"
+                />
     </FrameLayout>
-    <FrameLayout
+
+    <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="162dp" android:layout_gravity="center_horizontal">
-        <EditText
-                android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            android:paddingTop="10dp"
+            android:paddingRight="15dp"
+            android:paddingLeft="15dp"
+            android:paddingBottom="10dp">
+
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText" android:layout_gravity="center_horizontal" android:layout_marginTop="30dp"
-                android:layout_marginBottom="20dp" android:autoText="false" android:editable="false"
-                android:inputType="text" android:maxLength="50" android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp" android:nestedScrollingEnabled="true" android:hint="Введите название"/>
-        <Button
-                android:layout_width="155dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="10dp"
+                android:weightSum="1">
+
+            <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:id="@+id/editName"
+                    style="@style/EditTextAppTheme"
+                    android:text="Это название тренировки"
+                    android:layout_gravity="top|center"
+                    />
+        </LinearLayout>
+
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="OK"
-                android:id="@+id/button4" android:layout_gravity="left|bottom" android:layout_marginLeft="10dp"
-                android:layout_marginBottom="10dp"/>
-        <Button
-                android:layout_width="155dp"
-                android:layout_height="wrap_content"
-                android:text="Отмена"
-                android:id="@+id/button5" android:layout_gravity="right|bottom" android:layout_marginBottom="10dp"
-                android:layout_marginRight="10dp"/>
-    </FrameLayout>
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="20dp">
+
+            <Button
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:text="OK"
+                    android:id="@+id/button2"
+                    android:layout_row="2"
+                    android:layout_column="0"
+                    android:layout_gravity="left|bottom"
+                    />
+
+            <Button
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:text="Отмена"
+                    android:id="@+id/button3"
+                    android:layout_row="2"
+                    android:layout_column="1"
+                    android:layout_marginLeft="10dp"/>
+        </LinearLayout>
+    </LinearLayout>
+
 </LinearLayout>
