--- a/res/layout/workout_started.xml
+++ b/res/layout/workout_started.xml
@@ -76,8 +76,7 @@
                 android:layout_gravity="end|bottom"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
-                android:textSize="50sp"
-                android:textColor="#fff"/>
+                android:textSize="50sp"/>
 
 
     </FrameLayout>
