--- a/res/layout/exercises_full_list.xml
+++ b/res/layout/exercises_full_list.xml
@@ -11,9 +11,9 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="@string/workout_creation"
-                android:id="@+id/textView" android:layout_gravity="start|center_vertical" android:textColor="#ffffff"
-                android:textSize="30sp" android:layout_marginStart="20dp"/>
+                android:text="@string/exercises_list"
+                android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:textColor="#ffffff"
+                android:textSize="30dp" android:layout_marginLeft="20dp"/>
     </FrameLayout>
     <FrameLayout
             android:layout_width="match_parent"
@@ -25,20 +25,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/trainList" android:layout_gravity="center_horizontal|top"
-                tools:listitem="@layout/list_item_exercises" android:divider="#dedede"
+                tools:listitem="@layout/list_item_exercises_full_list" android:divider="#dedede"
                 android:dividerHeight="1dp" android:choiceMode="singleChoice"/>
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:background="@drawable/round_button"
-                android:src="@drawable/ic_add_white_24dp_xxhd"
-                android:id="@+id/button"
-                android:layout_gravity="end|bottom"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:textSize="50sp"
-                android:textColor="#ffffff"/>
 
     </FrameLayout>
 </LinearLayout>
