--- a/res/layout/exercise_creating.xml
+++ b/res/layout/exercise_creating.xml
@@ -12,12 +12,12 @@
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:id="@+id/frameLayout"
-            android:background="#ffa500">
+            android:background="@color/main_orange">
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="@string/main_title"
+                android:text="@string/exercise_name"
                 android:id="@+id/textView"
                 android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
@@ -31,22 +31,6 @@
                 android:layout_gravity="end|center_vertical"
                 >
 
-
-            <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/historyButton"
-                    android:src="@drawable/ic_history_white_24dp"
-                    android:layout_marginEnd="15dp"
-                    android:background="#00ff2234"/>
-
-            <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/infoButton"
-                    android:src="@drawable/ic_info_outline_white_24dp"
-                    android:layout_marginEnd="15dp"
-                    android:background="#00ff2234"/>
         </LinearLayout>
 
     </FrameLayout>
@@ -58,11 +42,11 @@
 
 
         <ListView
-                android:id="@+id/trainList"
+                android:id="@+id/setsList"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="start|top"
-                tools:listitem="@layout/list_item"
+                tools:listitem="@layout/expandable_list_item_child_removable"
                 android:divider="#dedede"
                 android:dividerHeight="1dp"/>
 
@@ -78,6 +62,38 @@
                 android:layout_marginBottom="20dp"
                 android:textSize="50sp"
                 android:textColor="#fff"/>
+
+        <ImageButton
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textAlignment="center"
+           android:background="@drawable/round_button"
+           android:src="@drawable/ic_add_white_24dp_xxhd"
+           android:id="@+id/nextButton"
+           android:layout_gravity="end|bottom"
+           android:layout_marginEnd="20dp"
+           android:layout_marginBottom="20dp"
+           android:textColor="#fff"/>
+
+        <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:background="@drawable/button_end"
+                android:src="@drawable/ic_done_white_24dp"
+                android:id="@+id/finishButton"
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="20dp"/>
+        <!--<ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:background="@drawable/button_delete"
+                android:src="@drawable/ic_delete_white_24dp_xxhdpi"
+                android:id="@+id/button_delete"
+                android:layout_gravity="start|bottom"
+                android:layout_marginLeft="20dp"
+                android:layout_marginBottom="20dp"/>-->
 
     </FrameLayout>
 </LinearLayout>
