--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -28,11 +28,12 @@
             android:layout_height="wrap_content"
             android:paddingStart="6dp"
             android:paddingEnd="6dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:text="@string/workout_name"
             android:textSize="20sp"
             android:textColor="#000"
             android:textAlignment="center"
-            android:layout_centerInParent="true"
             android:layout_gravity="left|center_vertical"/>
 
 </FrameLayout>
