--- a/res/layout/list_item_exercises_full_list.xml
+++ b/res/layout/list_item_exercises_full_list.xml
@@ -7,7 +7,10 @@
         android:layout_height="60dp"
         android:paddingStart="6dp"
         android:paddingEnd="6dp"
->
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:descendantFocusability="blocksDescendants"
+        >
 
     <ImageButton
             android:layout_width="wrap_content"
@@ -17,10 +20,13 @@
             android:src="@drawable/ic_add_orange_36dp"
             android:id="@+id/button_add"
             android:layout_gravity="end|center"
-            android:layout_marginEnd="30dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="0dp"
             android:textSize="30sp"
-            android:textColor="#ffffff"/>
+            android:textColor="#ffffff"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            />
 
     <TextView
             android:id="@+id/listItem"
