--- a/res/layout/exercise_info.xml
+++ b/res/layout/exercise_info.xml
@@ -1,26 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:weightSum="1" android:background="@color/light_gray_1">
+              android:weightSum="1"
+              android:background="@color/light_gray_1">
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp" android:layout_gravity="center_horizontal"
-            android:id="@+id/frameLayout" android:background="#ffa500">
+            android:layout_height="70dp"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/frameLayout"
+            android:background="#ffa500">
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:id="@+id/titleText" android:layout_gravity="start|center_vertical" android:textColor="#ffffff"
-                android:textSize="30sp" android:layout_marginStart="20dp"/>
+                android:id="@+id/title"
+                android:layout_gravity="start|center_vertical"
+                android:textColor="#ffffff"
+                android:textSize="30sp"
+                android:text="@string/exercise_info"
+                android:layout_marginStart="20dp"/>
     </FrameLayout>
+
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/exerciseTitle"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@color/light_gray_1" android:layout_marginBottom="5dp"/>
+
+    <View android:layout_width="fill_parent" android:layout_height="2dp"
+          android:background="@android:color/darker_gray" android:layout_marginStart="15dp"
+          android:layout_marginEnd="10dp"/>
+
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/descriptionText" android:layout_gravity="center_horizontal" android:textColor="#000000"
-            android:textSize="20sp" android:layout_marginStart="15dp" android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"
+            android:id="@+id/descriptionText"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/light_gray_1"/>
 </LinearLayout>
 
