--- a/res/layout/list_item_exercises_full_list.xml
+++ b/res/layout/list_item_exercises_full_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<FrameLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="60dp"
@@ -11,6 +11,20 @@
         android:paddingBottom="10dp"
         android:descendantFocusability="blocksDescendants"
         >
+
+    <TextView
+            android:id="@+id/listItem"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/exercise_name"
+            android:textSize="20sp"
+            android:textColor="#000"
+            android:textAlignment="center"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_vertical|start"/>
 
     <ImageButton
             android:layout_width="wrap_content"
@@ -26,19 +40,6 @@
             android:textColor="#ffffff"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            />
+            android:layout_marginLeft="20dp"/>
 
-    <TextView
-            android:id="@+id/listItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="6dp"
-            android:paddingEnd="6dp"
-            android:text="@string/exercise_name"
-            android:textSize="20sp"
-            android:textColor="#000"
-            android:textAlignment="center"
-            android:layout_centerInParent="true"
-            android:layout_gravity="start|center_vertical"/>
-
-</FrameLayout>
+</LinearLayout>
