--- a/res/layout/expandable_list_item.xml
+++ b/res/layout/expandable_list_item.xml
@@ -11,15 +11,14 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:layout_marginLeft="20dp"
-            >
+            android:layout_marginLeft="20dp">
 
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                   android:id="@+id/exerciseName"
+                  android:text="Название тренировки"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:gravity="center_vertical"
-                  android:text="Название упражнения"
                   android:ellipsize="marquee"
                   android:maxLines="1"
                   android:textSize="20sp"
