--- a/res/layout/dialog_set_weight.xml
+++ b/res/layout/dialog_set_weight.xml
@@ -45,11 +45,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/dlg_reps"
-                    android:id="@+id/textView6"
+                    android:id="@+id/textViewReps"
                     android:textColor="@android:color/black"
-                    android:layout_row="0"
-                    android:layout_column="0"
-
                     android:layout_gravity="center_vertical"/>
 
             <EditText
@@ -57,11 +54,9 @@
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
-                    android:id="@+id/editText2"
-                    android:layout_column="0"
-                    android:layout_row="1"
+                    android:id="@+id/editReps"
                     style="@style/EditTextAppTheme"
-                    android:layout_marginLeft="10dp"/>
+                    android:layout_marginStart="10dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -76,10 +71,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/dlg_kg"
-                    android:id="@+id/textView7"
-                    android:layout_column="1"
+                    android:id="@+id/textViewWeight"
                     android:textColor="@android:color/black"
-                    android:layout_row="0"
                     android:textAlignment="center"
                     android:layout_gravity="center"/>
 
@@ -88,43 +81,15 @@
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
-                    android:id="@+id/editText3"
-                    android:layout_column="1"
+                    android:id="@+id/editWeight"
                     android:maxLength="6"
                     android:maxWidth="100dp"
                     android:numeric="decimal"
                     style="@style/EditTextAppTheme"
-                    android:layout_row="1"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_marginLeft="10dp"/>
+                    android:layout_gravity="start|center_vertical"
+                    android:layout_marginStart="10dp"/>
         </LinearLayout>
 
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="20dp">
-
-            <Button
-                    android:layout_width="130dp"
-                    android:layout_height="wrap_content"
-                    android:text="OK"
-                    android:id="@+id/button2"
-                    android:layout_row="2"
-                    android:layout_column="0"
-                    android:layout_gravity="left|bottom"
-                    />
-
-            <Button
-                    android:layout_width="130dp"
-                    android:layout_height="wrap_content"
-                    android:text="Отмена"
-                    android:id="@+id/button3"
-                    android:layout_row="2"
-                    android:layout_column="1"
-                    android:layout_marginLeft="10dp"/>
-        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
