--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -22,32 +22,24 @@
                 android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
                 android:textSize="30sp"
-                android:layout_marginStart="20dp"/>
-
-
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|center_vertical"
-        >
-
-        </LinearLayout>
-
+                android:layout_marginStart="20dp" />
     </FrameLayout>
 
-    <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/light_gray_1">
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|center_vertical">
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-        android:text="Это помошь"
-        android:textColor="#000"
-        android:textSize="20sp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"/>
+                  android:text="@string/help_text"
+                  android:textColor="#000"
+                  android:textSize="20sp"
+                  android:layout_marginStart="15dp"
+                  android:layout_marginEnd="10dp"
+                  android:layout_marginTop="20dp"
+                  android:id="@+id/helpText"/>
+    </LinearLayout>
 
 
-    </FrameLayout>
 </LinearLayout>
 
