--- a/res/layout/sets_creating.xml
+++ b/res/layout/sets_creating.xml
@@ -5,66 +5,37 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:weightSum="1"
-              android:background="#ffffff">
-
+              android:background="@color/light_gray_1">
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:id="@+id/frameLayout"
             android:background="#ffa500">
-
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="@string/main_title"
-                android:id="@+id/textView"
+                android:id="@+id/title"
                 android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
                 android:textSize="30sp"
+                android:text="@string/sets_creating"
                 android:layout_marginStart="20dp"/>
-
-
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|center_vertical"
-                >
-
-
-            <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/historyButton"
-                    android:src="@drawable/ic_history_white_24dp"
-                    android:layout_marginEnd="15dp"
-                    android:background="#00ff2234"/>
-
-            <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/helpButton"
-                    android:src="@drawable/ic_info_outline_white_24dp"
-                    android:layout_marginEnd="15dp"
-                    android:background="#00ff2234"/>
-        </LinearLayout>
-
     </FrameLayout>
 
-    <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#f6f9fb">
-
-
+    <FrameLayout android:layout_width="match_parent"
+                  android:layout_height="match_parent">
         <ListView
-                android:id="@+id/trainList"
+                android:id="@+id/setsListView"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="start|top"
-                tools:listitem="@layout/list_item"
+                android:layout_gravity="center_horizontal|top"
+                android:layout_marginTop="20dp" android:layout_marginStart="20dp"
+                android:layout_marginEnd="10dp"
+                tools:listitem="@layout/set_list_item"
                 android:divider="#dedede"
-                android:dividerHeight="1dp"/>
+                android:dividerHeight="1dp"
+        />
 
         <ImageButton
                 android:layout_width="wrap_content"
@@ -84,15 +55,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:background="@drawable/button_delete"
-                android:src="@drawable/ic_delete_white_24dp_xxhdpi"
-                android:id="@+id/button_delete"
+                android:background="@drawable/button_end"
+                android:src="@drawable/ic_done_white_24dp"
+                android:id="@+id/button_end"
                 android:layout_gravity="start|bottom"
                 android:layout_marginStart="20dp"
                 android:layout_marginBottom="20dp"
                 android:visibility="invisible"
                 android:textSize="50sp"/>
-
     </FrameLayout>
+
 </LinearLayout>
 
