--- a/res/layout/sets_creating.xml
+++ b/res/layout/sets_creating.xml
@@ -6,12 +6,14 @@
               android:layout_height="fill_parent"
               android:weightSum="1"
               android:background="@color/light_gray_1">
+
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:id="@+id/frameLayout"
             android:background="#ffa500">
+
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
@@ -23,19 +25,22 @@
                 android:layout_marginStart="20dp"/>
     </FrameLayout>
 
-    <FrameLayout android:layout_width="match_parent"
-                  android:layout_height="match_parent">
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <ListView
                 android:id="@+id/setsListView"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="20dp" android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginEnd="10dp"
                 tools:listitem="@layout/set_list_item"
                 android:divider="#dedede"
                 android:dividerHeight="1dp"
-        />
+                />
 
         <ImageButton
                 android:layout_width="wrap_content"
