--- a/res/layout/dialog_workout_name.xml
+++ b/res/layout/dialog_workout_name.xml
@@ -5,7 +5,7 @@
               android:layout_height="wrap_content"
               android:background="@color/light_gray_1"
               android:weightSum="1"
-              android:baselineAligned="false">
+              android:baselineAligned="false" android:focusable="false">
 
     <FrameLayout
             android:layout_width="fill_parent"
@@ -52,8 +52,7 @@
                     style="@style/EditTextAppTheme"
                     android:hint="@string/training_name"
                     android:textAlignment="center"
-                    android:gravity="center_horizontal"
-                    />
+                    android:gravity="center_horizontal"/>
         </LinearLayout>
 
     </LinearLayout>
