--- a/res/layout/expandable_list_item_removable.xml
+++ b/res/layout/expandable_list_item_removable.xml
@@ -1,48 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        >
-
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:layout_marginLeft="20dp"
-            >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="horizontal"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:paddingTop="5dp"
+              android:paddingBottom="5dp"
+              android:paddingStart="20dp"
+              android:paddingEnd="10dp">
 
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                   android:id="@+id/exerciseName"
-                  android:layout_width="fill_parent"
-                  android:layout_height="fill_parent"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:layout_marginEnd="10dp"
                   android:gravity="center_vertical"
                   android:text="Название упражнения"
                   android:ellipsize="marquee"
-                  android:maxLines="1"
+                  android:maxLines="2"
+                  android:minLines="2"
                   android:textSize="20sp"
-                  android:maxWidth="250dp"
-                  android:textColor="#000"/>
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginRight="5dp">
+                  android:textColor="#000" android:layout_weight="5"/>
 
         <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_horizontal"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="11dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="end"
                 android:button="@drawable/check_selector"
                 android:checked="false"
-                android:focusable="false"
-                />
-    </LinearLayout>
-
-</FrameLayout>
+                android:focusable="false"/>
+</LinearLayout>
 
