--- a/res/layout/dialog_workout_name.xml
+++ b/res/layout/dialog_workout_name.xml
@@ -52,6 +52,7 @@
                     style="@style/EditTextAppTheme"
                     android:hint="@string/training_name"
                     android:textAlignment="center"
+                    android:maxLength="50"
                     android:gravity="center_horizontal"/>
         </LinearLayout>
 
